--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,6 @@
 version: 0.0.{build}
+platform:
+  - x64
 environment:
   matrix:
   - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
@@ -22,7 +24,8 @@ build_script:
   - mkdir build
   - cd build
   - cmd: cmake -G "Visual Studio 15 2017 Win64" -DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake -DQt5_DIR=C:/Qt/%QT_VERSION%/%QT_COMPILER%/lib/cmake/Qt5 -DCMAKE_BUILD_TYPE=Release ..
-  - sh: cmake -DCMAKE_BUILD_TYPE=Debug ..
+  - sh: cmake -DCMAKE_BUILD_TYPE=Debug -DGTEST_ROOT:PATH=$HOME/googletest ..
   - cmake --build .
-  - ../.bin/Debug/lib_tests --gtest_output="xml:tests.xml"
+  - cmd: start ../.bin/Debug/lib_tests --gtest_output="xml:tests.xml"
+  - sh: ../.bin/Debug/lib_tests --gtest_output="xml:tests.xml"
   - sh: ../coverage.sh
