--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,3 +36,4 @@ after_test:
   - sh: lcov -c -d . -o coverage.info
   - sh: lcov -r coverage.info '*/mingw64/*' '*/mingw32/*' '/c/Qt/*' '*/test/*'  -o coverage.info
   - sh: bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
+  - sh: curl --data-binary @tests.xml https://ci.appveyor.com/api/testresults/junit/$APPVEYOR_JOB_ID
